--- a/qc-together.ipynb
+++ b/qc-together.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time in problem setup: 0.007082939147949219\n",
-      "Submitted a new batch: QCJob2546\n",
-      "Time quantum job: 11.385180950164795\n",
-      "length of result object:  64\n",
-      "[[0.86369219 0.86369219]\n",
-      " [0.86369305 0.86369305]\n",
-      " [0.86369219 0.86369219]]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
-      " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63]\n",
-      "64 64 64\n",
-      "Time processing vecs : 0.0033299922943115234\n"
+      "Time in problem setup: 0.06804108619689941\n",
+      "Submitted a new batch: QCJob2802\n",
+      "Time quantum job: 12.237298965454102\n",
+      "length of result object:  63019\n",
+      "[[0.86355318 0.86355406 0.86355406 0.86355318]\n",
+      " [0.86355406 0.86355504 0.86355504 0.86355406]\n",
+      " [0.86355406 0.86355504 0.86355504 0.86355406]\n",
+      " [0.86355318 0.86355406 0.86355406 0.86355318]]\n",
+      "[    0     1     2 ... 65480 65488 65504]\n",
+      "63019 63019 63019\n",
+      "Time processing vecs : 0.42612791061401367\n"
      ]
     }
    ],
@@ -117,7 +116,7 @@
     "# testing timescales.\n",
     "t1 = time()\n",
     "\n",
-    "L1, L2 = 3, 2\n",
+    "L1, L2 = 4, 4\n",
     "nqbits = L1 * L2\n",
     "R0 = 6.0\n",
     "# qsqr = qse.utils.squarelattice(6.0, L1, L2)\n",
@@ -167,6 +166,26 @@
     "t2 = time()\n",
     "pickle.dump((L1, L2, coeff), open('quantum-data.pkl', 'wb'))\n",
     "print(f\"Time processing vecs : {t2 - t1}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "qat.core.wrappers.result.Result"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(result)"
    ]
   },
   {
