--- a/qc-missing-states.ipynb
+++ b/qc-missing-states.ipynb
@@ -246,6 +246,20 @@
     "plt.ylabel(\"fraction of states in Results object\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$c_1, c_2, c_3, \\dots, c_N$\n",
+    "\n",
+    "$|c_i| \\sim \\frac{1}{2^n}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
