--- a/qc-together.ipynb
+++ b/qc-together.ipynb
@@ -16,9 +16,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time in problem setup: 0.021488189697265625\n",
-      "Submitted a new batch: QCJob5525\n",
-      "Time quantum job: 11.076062202453613\n",
+      "Time in problem setup: 0.024662017822265625\n",
+      "Submitted a new batch: SJob7404\n",
+      "Time quantum job: 11.528273105621338\n",
       "length of result object:  512\n",
       "[[0.86374635 0.8638017  0.86374635]\n",
       " [0.8638017  0.86386259 0.8638017 ]\n",
@@ -53,7 +53,7 @@
       " 486 487 488 489 490 491 492 493 494 495 496 497 498 499 500 501 502 503\n",
       " 504 505 506 507 508 509 510 511]\n",
       "512 512 512\n",
-      "Time processing vecs : 0.00892782211303711\n"
+      "Time processing vecs : 0.005023002624511719\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x148b3b3e0>]"
+       "[<matplotlib.lines.Line2D at 0x107c76900>]"
       ]
      },
      "execution_count": 2,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x148bed5b0>]"
+       "[<matplotlib.lines.Line2D at 0x13a120230>]"
       ]
      },
      "execution_count": 5,
@@ -304,9 +304,9 @@
      "output_type": "stream",
      "text": [
       "Read L1, L2 = (3, 3)\n",
-      "Time in s_i compute = 0.1094961166381836\n",
-      "Time in s_ij compute = 0.4579300880432129\n",
-      "Time in s_f compute = 0.00028705596923828125\n"
+      "Time in s_i compute = 0.1180410385131836\n",
+      "Time in s_ij compute = 0.4130392074584961\n",
+      "Time in s_f compute = 0.00044274330139160156\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "'\\nprint(f\\'Read L1, L2 = ({L1}, {L2})\\')\\n\\nt1 = time()\\ns_i = sf.get_spins(statevector, ibasis, N)\\nt2 = time()\\n\\nprint(f\"Time in s_i compute = {t2 - t1}\")\\nnp.savetxt(\\'final-si.dat\\', s_i)\\n\\nt1 = time()\\ns_ij = sf.get_sisj(statevector, ibasis, N)\\nt2 = time()\\n\\npickle.dump(s_ij, open(\\'classical-data.pkl\\', \\'wb\\'))\\nprint(f\"Time in s_ij compute = {t2 - t1}\")\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
     "import struc_fac as sf\n",
     "\n",
     "L1, L2 = 3, 3\n",
-    "L1, L2, statevector = pickle.load(open('quantum-data-4x4.pkl', 'rb'))\n",
+    "L1, L2, statevector = pickle.load(open('quantum-data.pkl', 'rb'))\n",
     "N = L1 * L2\n",
     "hsize = 2**N\n",
     "ibasis = sf.get_basis(hsize=hsize, N=N)\n",
@@ -392,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((63019,), 65536)"
+       "((512,), 512)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
